--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
 }
   
   .symbol {
-    font-size: 2.2rem;
+    font-size: 3rem;
     cursor: pointer;
     user-select: none;
     color: #97B090;
@@ -167,6 +167,7 @@
     gap: 16px;
     font-size: 0.85rem;
     color: #666666;
+    margin-left: 20px;
   }
   
   .footer a:hover {
@@ -189,6 +190,8 @@
   .visual-projects .tall {
     grid-column: span 2;
   }
+
+
   .visual-projects img {
     width: 100%;
     display: block;
@@ -218,3 +221,17 @@
     font-family: "Xanh Mono", monospace;
   }
         
+  .embed-wrapper {
+    position: relative;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 ratio */
+    border: 1px solid var(--border);
+    overflow: hidden;
+  }
+  
+  .embed-wrapper iframe {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    border
