--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@
     line-height: 1.6;
     font-family: "Xanh Mono", monospace;
     
-   background-image: url('images/pretzel.png');
+   background-image: url('media/pretzel.png');
     background-size: 300px;      
     background-position: top left; 
     background-repeat: no-repeat;
