--- a/projects/project-style.css
+++ b/projects/project-style.css
@@ -40,6 +40,10 @@ body {
     font-size: 1.05rem;
     line-height: 1.6;
   }
+
+  .techicons {
+    margin-top: 30px;
+  }
   
   /* ===== MEDIA ===== */
   .project-media img {
